--- a/photo.html
+++ b/photo.html
@@ -19,7 +19,7 @@
         </picture>
         </a>
     
-    <nav class="main-nav main-nav--opened main-nav--nojs">
+    <nav class="main-nav main-nav--closed main-nav--nojs">
        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
        <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
